<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mamt.plumel.view.fragments.ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/imageView"
                android:src="@drawable/profile_icon_9"
                android:layout_gravity="center"
                android:contentDescription="Descripcion"/>

            <TextView
                android:id="@+id/userNameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize_username_card"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_contra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_cargar_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tomar_foto"
                android:theme="@style/RaisedButtonDark"
                android:layout_gravity="center|bottom" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/bb_height"
                android:layout_gravity="center|bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_save_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_guardar_cambios"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_gravity="center|bottom"
                    android:layout_weight=".5"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <Button
                    android:id="@+id/cerrar_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cerrar_sesion"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_gravity="center|bottom"
                    android:layout_weight=".5"
                    style="?android:attr/buttonBarButtonStyle"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>