<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serviceCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginTop="@dimen/activity_horizontal_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            android:background="@drawable/image"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundtext_card">

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/card_string_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_string_address"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/card_tv"/>

                <TextView
                    android:id="@+id/card_service_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_service_address"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/card_tv"
                    android:layout_marginLeft="@dimen/card_marginleft"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_cardtop">
                <CheckBox
                    android:id="@+id/check_serviceComplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:id="@+id/card_string_servicecomplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_string_serviceComplete"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/card_tv"
                    android:layout_marginLeft="@dimen/card_marginleft"/>
            </LinearLayout>



        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>